@@ -5,6 +5,7 @@ Gaupol 0.12
  [D] Add "All supported files" filter to the open dialog
  [D] Fix error saving after splitting project (#10041)
  [D] Fix NameErrors with lambda functions (#10034)
+ [D] Fix error opening SubRip file if the first line is blank (#10054)
  [D] Fix markup tooltip hack to work with (Py)GTK 2.12
  [D] Remove license page from the Windows installer
  [D] Include iso-codes with the Windows installer
