@@ -1,3 +1,8 @@
+2007-09-25  Osmo Salomaa  <otsaloma@cc.hut.fi>
+
+	* gaupol/files/subfile.py (_read_lines):
+	Strip blank lines from beginning as well.
+
 2007-09-24  Osmo Salomaa  <otsaloma@cc.hut.fi>
 
 	* gaupol/gtk/dialogs/file/subtitle.py (_init_filters):
